re PR libfortran/12884 ([4.0 only] error in reading a namelist when it is predeced by a line with a SLASH)

2004-01-31  Bud Davis  <bdavis9659@comcast.net>

	PR fortran/12884
	* libI77/rsne.c: Enable reading a '/' when reading
	a '$' delimited namelist.

From-SVN: r77032